--- a/post/biblio/blog-bib.bib
+++ b/post/biblio/blog-bib.bib
@@ -1,6 +1,6 @@
 @article{hendriksen2020optional,
 	title={Optional stopping with Bayes factors: a categorization and extension of folklore results, with an application to invariant situations},
-	author={Hendriksen, Allard and {\VANDER{Heide}{De}{de}} Heide, Rianne and Gr{\"u}nwald, Peter},
+	author={Hendriksen, Allard and {\VANDER{Heide}{De}{de}}de Heide, Rianne and Gr{\"u}nwald, Peter},
 	journal={Bayesian Analysis, advance publication},
 	year={2020},
 	publisher={International Society for Bayesian Analysis}
@@ -18,7 +18,7 @@
 }
 
 @article{safetesting,
-  author =	 {Gr{\"u}nwald, P. and {\VANDER{Heide}{De}{de}} Heide, R. and Koolen, W.},
+  author =	 {Gr{\"u}nwald, P. and {\VANDER{Heide}{De}{de}}de Heide, R. and Koolen, W.},
   title =	 {Safe Testing},
   journal =	 {arXiv preprint arXiv:1906.07801},
   year =	 2019,
@@ -398,7 +398,7 @@
 
 @article{heide2020optional,
 	title={Why optional stopping can be a problem for Bayesians},
-	author={{\VANDER{Heide}{De}{de}} Heide, Rianne and Gr{\"u}nwald, Peter D.},
+	author={{\VANDER{Heide}{De}{de}}de Heide, Rianne and Gr{\"u}nwald, Peter D.},
 	journal={Psychonomic Bulletin \& Review, advance publication},
 	pages={1--18},
 	year={2020},
