--- a/post/biblio/blog-bib1.bib
+++ b/post/biblio/blog-bib1.bib
@@ -18,7 +18,7 @@
 }
 
 @article{safetesting,
-  author =	 {Gr{\"u}nwald, P. and Heide, R. de and Koolen, W.},
+  author = {Gr{"u}nwald, P. and de Heide, R. and Koolen, W.},
   title =	 {Safe Testing},
   journal =	 {arXiv preprint arXiv:1906.07801},
   year =	 2019,
