--- a/post/biblio/blog-bib2.bib
+++ b/post/biblio/blog-bib2.bib
@@ -398,7 +398,7 @@
 
 @article{heide2020optional,
 	title={Why optional stopping can be a problem for Bayesians},
-	author={de{\ }Heide, Rianne and Gr{\"u}nwald, Peter D.},
+	author={De{\ }Heide, Rianne and Gr{\"u}nwald, Peter D.},
 	journal={Psychonomic Bulletin \& Review, advance publication},
 	pages={1--18},
 	year={2020},
