--- a/post/Maller4.bib
+++ b/post/Maller4.bib
@@ -18,7 +18,7 @@ year={1949}
 
 @article{gmz95,
 title={Estimating the proportion of immunes in censored samples: a simulation study},
-author={Ghitany, M., Maller, R., Zhou, S.},
+author={Ghitany M., Maller R. and Zhou S.},
 journal={Stat. Med.},
 volume={14},
 pages={39--49},
@@ -45,7 +45,7 @@ year={1991}
 
 @article{Liu2018,
 title={An integrated TCGA pan-cancer clinical data resource to drive high-quality survival outcome analytics},
-author={Liu, J.,  Lichtenberg, T., Hoadley, K.A., Poisson, L.M., Lazar, A.J., Cherniack, A.D.. Kovatich, A.J., Benz, C.C., Levine, D.A., Lee, A.V., Omberg, L., Wolf, D.M., Shriver, C.D., Thorsson, V. and Hu, H.},
+author={Liu J.,  Lichtenberg T., Hoadley K.A., Poisson L.M., Lazar A.J., Cherniack A.D.. Kovatich A.J., Benz C.C., Levine D.A., Lee A.V., Omberg L., Wolf D.M., Shriver C.D., Thorsson V. and Hu H.},
 journal={Cell},
 volume={173},
 pages={400--416},
@@ -54,7 +54,7 @@ year={2018}
 
 @article{MRS2020,
 title={Splitting the sample at the largest uncensored observation},
-author={Maller, R.A., Resnick, S. and Shemehsavar, S.},
+author={Maller R.A., Resnick S. and Shemehsavar S.},
 journal={in draft},
 year={2020}
 }
@@ -77,7 +77,7 @@ year={2000}
 
 @article{emvz2020,
 title={Estimation of the cure rate for distributions in the {G}umbel maximum domain of attraction under insufficient follow-up},
-author={Escobar-Bach, M., Maller, R.A., Van Keilegom, I.  and Zhao, M.},
+author={Escobar-Bach M., Maller R.A., Van Keilegom I.  and Zhao M.},
 journal={Biometrika},
 year={2020}
 }
@@ -110,7 +110,7 @@ year={2020}
 
 @article{MRS2020,
 title={Splitting the sample at the largest uncensored observation},
-author={Maller, R.A., Resnick, S. and Shemehsavar, S.},
+author={Maller R.A., Resnick S. and Shemehsavar S.},
 journal={Submitted},
 year={2020}
 }
