--- a/post/bib.bib
+++ b/post/bib.bib
@@ -3,7 +3,7 @@
 @article{west1984outlier,
   title={Outlier models and prior distributions in Bayesian linear regression},
   author={West, Mike},
-  journal={Journal of the Royal Statistical Society: Series B (Methodological)},
+  journal={Journal of the Royal Statistical Society: Series B (Statistical Methodology)},
   volume={46},
   number={3},
   pages={431--439},
@@ -86,7 +86,7 @@
 @article{rue2009approximate,
   title={Approximate Bayesian inference for latent Gaussian models by using integrated nested Laplace approximations},
   author={Rue, H{\aa}vard and Martino, Sara and Chopin, Nicolas},
-  journal={Journal of the royal statistical society: Series b (statistical methodology)},
+  journal={Journal of the Royal Statistical Society: Series B (Statistical Methodology)},
   volume={71},
   number={2},
   pages={319--392},
