--- a/post/davezies_bib.bib
+++ b/post/davezies_bib.bib
@@ -9,7 +9,7 @@
 @article{menzel,
 	title={Bootstrap With Clustering in two or More Dimensions},
 	author={Menzel, Konrad},
-	note={Working paper},
+	journal={Working paper},
 	year={2018}
 }
 
@@ -17,7 +17,7 @@
 @article{davezies1,
 	title={Asymptotic results under multiway clustering},
 	author={Davezies, Laurent and D'Haultf{\oe}uille, Xavier and Guyonvarch, Yannick},
-	note={ArXiv e-prints, eprint 1807.07925},
+	journal={ArXiv e-prints, eprint 1807.07925},
 	year={2018}
 }
 
@@ -25,7 +25,7 @@
 @article{mackinnon2017,
 	title={Wild Bootstrap and Asymptotic Inference with Multiway Clustering},
 	author={MacKinnon, James G and Nielsen, Morten {\O} and Webb, Matthew D},
-	note={Working paper},
+	journal={Working paper},
 	year={2019}
 }
 
@@ -41,7 +41,7 @@
 @article{davezies2,
 	title={Empirical Process Results for Exchangeable Arrays},
 	author={Davezies, Laurent and D'Haultf{\oe}uille, Xavier and Guyonvarch, Yannick},
-	note={The Annals of Statistics},
+	journal={The Annals of Statistics},
 	year={2021}
 }
 
@@ -57,7 +57,7 @@
 @article{silverman,
 	title={Empirical Process Results for Exchangeable Arrays},
 	author={Silverman, B.W.},
-	note={Advances in Applied Probability},
+	journal={Advances in Applied Probability},
 	year={1976}
 }
 
