--- a/post/punshon_bibliography.bib
+++ b/post/punshon_bibliography.bib
@@ -589,7 +589,7 @@
 
 @article{GibsonSchwarz63,
   title={The universal equilibrium spectra of turbulent velocity and scalar fields},
-  author={Gibson, CHj and Schwarz, WH},
+  author={Gibson, CH and Schwarz, WH},
   journal={Journal of Fluid Mechanics},
   volume={16},
   number={3},
